Also set mob awareness
Also renames the dumb package name

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: MakeThemThink
 version: '${version}'
-main: me.noahvdaa.makethemthink.makethemthink.MakeThemThink
+main: me.noahvdaa.makethemthink.MakeThemThink
 api-version: 1.18
 load: STARTUP
 authors: [ NoahvdAa ]
